Menambah elemen2 semantic

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           </div>
         </article>
         <aside>
-          <!-- <img src="./assets/img/Profile.png" alt="Profile" /> -->
+          <img src="./assets/img/Profile.jpg" alt="Profile" />
         </aside>
       </section>
       <!-- Hero End -->
@@ -78,73 +78,80 @@
           <p>Recent Post</p>
           <a href="#" style="color: #00a8cc">View All</a>
         </div>
-        <article>
-          <!-- Konten Pertama -->
-          <div class="konten">
-            <div class="judul-content">
-              <h1 style="font-size: 1.5rem">
-                Making a design system from scratch
-              </h1>
-            </div>
-            <div class="tanggal-konten">
-              <p>12 Feb 2020</p>
-              <p>|</p>
-              <p>Design, Pattern</p>
-            </div>
-            <div class="deskripsi-konten">
-              <p>
-                Amet minim mollit non deserunt ullamco est sit aliqua dolor do
-                amet sint. Velit officia consequat duis enim velit mollit.
-                Exercitation veniam consequat sunt nostrud amet.
-              </p>
-            </div>
-          </div>
-          <!-- Konten Pertama End -->
 
-          <!-- Konten Kedua -->
-          <div class="konten">
-            <div class="judul-content">
-              <h1 style="font-size: 1.5rem">
-                Making a design system from scratch
-              </h1>
+        <div class="konten">
+          <article>
+            <!-- Konten Pertama -->
+            <div class="konten">
+              <div class="judul-content">
+                <h1 style="font-size: 1.5rem">
+                  Making a design system from scratch
+                </h1>
+              </div>
+              <div class="tanggal-konten">
+                <p>12 Feb 2020</p>
+                <p>|</p>
+                <p>Design, Pattern</p>
+              </div>
+              <div class="deskripsi-konten">
+                <p>
+                  Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+                  amet sint. Velit officia consequat duis enim velit mollit.
+                  Exercitation veniam consequat sunt nostrud amet.
+                </p>
+              </div>
             </div>
-            <div class="tanggal-konten">
-              <p>12 Feb 2020</p>
-              <p>|</p>
-              <p>Design, Pattern</p>
-            </div>
-            <div class="deskripsi-konten">
-              <p>
-                Amet minim mollit non deserunt ullamco est sit aliqua dolor do
-                amet sint. Velit officia consequat duis enim velit mollit.
-                Exercitation veniam consequat sunt nostrud amet.
-              </p>
-            </div>
-          </div>
-          <!-- Konten Kedua End -->
+            <!-- Konten Pertama End -->
+          </article>
 
-          <!-- Konten Ketiga -->
-          <div class="konten">
-            <div class="judul-content">
-              <h1 style="font-size: 1.5rem">
-                Making a design system from scratch
-              </h1>
+          <article>
+            <!-- Konten Kedua -->
+            <div class="konten">
+              <div class="judul-content">
+                <h1 style="font-size: 1.5rem">
+                  Making a design system from scratch
+                </h1>
+              </div>
+              <div class="tanggal-konten">
+                <p>12 Feb 2020</p>
+                <p>|</p>
+                <p>Design, Pattern</p>
+              </div>
+              <div class="deskripsi-konten">
+                <p>
+                  Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+                  amet sint. Velit officia consequat duis enim velit mollit.
+                  Exercitation veniam consequat sunt nostrud amet.
+                </p>
+              </div>
             </div>
-            <div class="tanggal-konten">
-              <p>12 Feb 2020</p>
-              <p>|</p>
-              <p>Design, Pattern</p>
+            <!-- Konten Kedua End -->
+          </article>
+
+          <article>
+            <!-- Konten Ketiga -->
+            <div class="konten">
+              <div class="judul-content">
+                <h1 style="font-size: 1.5rem">
+                  Making a design system from scratch
+                </h1>
+              </div>
+              <div class="tanggal-konten">
+                <p>12 Feb 2020</p>
+                <p>|</p>
+                <p>Design, Pattern</p>
+              </div>
+              <div class="deskripsi-konten">
+                <p>
+                  Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+                  amet sint. Velit officia consequat duis enim velit mollit.
+                  Exercitation veniam consequat sunt nostrud amet.
+                </p>
+              </div>
             </div>
-            <div class="deskripsi-konten">
-              <p>
-                Amet minim mollit non deserunt ullamco est sit aliqua dolor do
-                amet sint. Velit officia consequat duis enim velit mollit.
-                Exercitation veniam consequat sunt nostrud amet.
-              </p>
-            </div>
-          </div>
-          <!-- Konten Ketiga End -->
-        </article>
+            <!-- Konten Ketiga End -->
+          </article>
+        </div>
       </section>
       <!-- Blog End -->
 
@@ -154,8 +161,10 @@
           <p>Featured Works</p>
         </div>
         <!-- Isi Works 1 -->
-        <div class="isi-works">
-          <div class="img-works"></div>
+        <article class="isi-works">
+          <div class="img-works">
+            <img src="./assets/img/Project.png" alt="Project_1" />
+          </div>
           <div class="content-works">
             <div class="judul-content">
               <h1 style="font-size: 1.5rem">Designing Dashboard</h1>
@@ -182,14 +191,13 @@
               </p>
             </div>
           </div>
-        </div>
+        </article>
         <!-- Isi Works 1 Selesai -->
         <!-- Isi Works 2 -->
-        <div class="isi-works">
-          <div
-            class="img-works"
-            style="background: url(./assets/img/Project2.png)"
-          ></div>
+        <article class="isi-works">
+          <div class="img-works">
+            <img src="./assets/img/Project2.png" alt="Project_2" />
+          </div>
           <div class="content-works">
             <div class="judul-content">
               <h1 style="font-size: 1.5rem">Designing Dashboard</h1>
@@ -216,14 +224,13 @@
               </p>
             </div>
           </div>
-        </div>
+        </article>
         <!-- Isi Works 2 Selesai -->
         <!-- Isi Works 3 -->
-        <div class="isi-works">
-          <div
-            class="img-works"
-            style="background: url(./assets/img/Project3.png)"
-          ></div>
+        <article class="isi-works">
+          <div class="img-works">
+            <img src="./assets/img/Project3.png" alt="Project_3" />
+          </div>
           <div class="content-works">
             <div class="judul-content">
               <h1 style="font-size: 1.5rem">Designing Dashboard</h1>
@@ -250,7 +257,7 @@
               </p>
             </div>
           </div>
-        </div>
+        </article>
         <!-- Isi Works 3 Selesai -->
       </section>
       <!-- Works End -->
