Menambah button top

--- a/index.html
+++ b/index.html
@@ -12,8 +12,14 @@
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   </head>
   <body>
+    <!-- Tombol To Top -->
+    <a href="#hero" class="topBtn">
+      <i style="color: grey" class="fa-solid fa-chevron-up logoTop"></i>
+    </a>
+    <!-- Tombol To Top Selesai -->
+
     <!-- Navbar -->
-    <header>
+    <header id="header">
       <nav>
         <div class="nav-logo">
           <img src="./assets/img/Logo.png" style="scale: 0.7" alt="Logo" />
